Updates to the SSUI guide based on the latest sprint and enablement demo

--- a/doc-Introduction_to_Self_Service_Portal/topics/Dashboard_Tab.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/topics/Dashboard_Tab.adoc
@@ -5,12 +5,22 @@
 Once you log in to the Self Service user interface, you will see the dashboard screen by default. The *Dashboard* tab provides a quick summary of the services available, requests made, and their statuses as below:
 
 * Total Services
-* Current (Active) Services
+* Current Services
 * Services Retiring Soon
 * Retired Services
 * Total Requests
 * Pending Requests
 * Approved Requests
 * Denied Requests
+* Monthly Charges - This Month To Date
 
-image:SSUI_dashboard.png[Dashboard Tab]
+image:SSUI_Dashboard_tab.png[Dashboard Tab]
+
+Monthly Charges - This Month To Date::
+
+The Self Service user interface now shows on the dashboard the total monthly charges of the services' usage in dollar amount. This provides a quick summary of where you are from cost standpoint of service usage charges to that point in the month. 
+
+[NOTE]
+====
+If you are on the first day of the month, there can be no data yet therefore resulting in zero dollar amount. Also, if you have a lot of data, it might not have rolled into the new month yet, resulting in no data and dollar amount for month to date.
+====
