--- a/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
@@ -6,7 +6,7 @@ The *My Services* tab lists all available services with a summary of information
 
 image:My_Services_SSUI.png[]
 
-Click on a service to view further details including information on the virtual machines associated with it. You can also get HTML 5 console access to the virtual machine by clicking the button, as highlighted on the screen capture. On the same screen, you also have options to retire the service now or at a later date, edit or remove the service. Additionally, you can now change the ownership and group of the service using the *Set Ownership* button, and also *Reconfigure* a service, similar to in the full administrative user interface. 
+Click on a service to view further details including information on the virtual machines associated with it. With the introduction of monthly charges, there is now a dollar amount associated with each service for the virtual machines' month to date usage. You can also get HTML 5 console access to the virtual machine by clicking the image:SSUI_html5_icon.png[Html 5 Icon] button, as highlighted on the screen capture. On the same screen, you also have options to retire the service now or at a later date, edit or remove the service. Additionally, you can now change the ownership and group of the service using the *Set Ownership* button, and also *Reconfigure* a service, similar to in the full administrative user interface. 
 
 image:SSUI_Service_Details1.png[]
 
