Further updates to the SSUI guide including screen captures.

--- a/doc-Introduction_to_Self_Service_Portal/topics/Dashboard_Tab.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/topics/Dashboard_Tab.adoc
@@ -12,13 +12,12 @@ Once you log in to the Self Service user interface, you will see the dashboard s
 * Pending Requests
 * Approved Requests
 * Denied Requests
-* Monthly Charges - This Month To Date
 
 image:SSUI_Dashboard_tab.png[Dashboard Tab]
 
 Monthly Charges - This Month To Date::
 
-The Self Service user interface now shows on the dashboard the total monthly charges of the services' usage in dollar amount. This provides a quick summary of where you are from cost standpoint of service usage charges to that point in the month. 
+The Self Service user interface has added basic support for displaying monthly chargeback data of the computing and storage cost for the use of resources, in the currencies supported by the full administrative user interface. This provides a quick summary of where you are from cost standpoint to that point in the month. For more information about configuring chargeback rates in the full administrative user interface and how {product-title} calculates chargeback costs, see https://access.redhat.com/documentation/en/red-hat-cloudforms/4.2-beta/single/monitoring-alerts-and-reporting/#sect_chargeback[Chargeback] in the _Monitoring, Alerts, and Reporting_ guide.  
 
 [NOTE]
 ====
