--- a/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
@@ -2,11 +2,11 @@
 
 == The My Services Tab
 
-The *My Services* tab lists all available services with a summary of information associated with each service, including *Service Name*, *Retirement Date*, *Number of VMs*, *Owner* and the date it was *Created On*. You can filter or sort the services listed by those values. 
+The *My Services* tab lists all available services with a summary of information associated with each service, including *Service Name*, *Retirement Date*, *Number of VMs*, *Owner*, the date it was *Created On*, and its *Power State*. You can filter or sort services by those entities, and now also by *Relative Cost*. There is now the ability for users to perform power operations on virtual machines within the Self Service user interface using the new set of buttons, *Start*, *Stop*, and *Suspend* for each service.  
 
-image:My_Services_SSUI.png[]
+image:SSUI_MyServices_tab.png[]
 
-Click on a service to view further details including information on the virtual machines associated with it. With the introduction of monthly charges, there is now a dollar amount associated with each service for the virtual machines' month to date usage. You can also get HTML 5 console access to the virtual machine by clicking the image:SSUI_html5_icon.png[Html 5 Icon] button, as highlighted on the screen capture. On the same screen, you also have options to retire the service now or at a later date, edit or remove the service. Additionally, you can now change the ownership and group of the service using the *Set Ownership* button, and also *Reconfigure* a service, similar to in the full administrative user interface. 
+Click a service to view further details including information on the virtual machines associated with it. There is now ability for users to view chargeback data per service for the virtual machines' month-to-date usage. You can also get HTML 5 console access to the virtual machine by clicking the image:SSUI_html5_icon.png[Html 5 Icon] button, as highlighted on the screen capture. On the same screen, you also have options to retire the service now or at a later date, edit or remove the service. Additionally, you can now change the ownership and group of the service using the *Set Ownership* button, and also *Reconfigure* a service, similar to in the full administrative user interface. 
 
 image:SSUI_Service_Details1.png[]
 
@@ -30,7 +30,7 @@ Cockpit must be pre-configured and running on the virtual machine.
 As you can see in the following screen capture of the Self Service user interface, the cockpit button is available next to the HTML 5 console button for a virtual machine instance in the *My Services* tab. 
 
 . Click the *My Services* tab.
-. Click on the required service from the list.
+. Click the required service from the list.
 . Click the Cockpit button image:SSUI_Cockpit-Button.png[Cockpit Button] located next to the HTML 5 console button to open the Cockpit interface for the virtual machine. A notification at the top of the screen will appear to show the Cockpit interface is loading. 
 image:SSUI_Click-Cockpit-Button.png[Cockpit Button]
 . The Cockpit interface for the virtual machine will open in a new browser window. If you get a security warning by the browser, you will need to add this connection to the security exceptions. Click *Advanced → Add Exception → Confirm Security Exception*. After that, you will see the login screen.
