added draft content for automatic tagging on containers - WIP

--- a/doc-Managing_Infrastructure_and_Inventory/cfme/master.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/cfme/master.adoc
@@ -76,3 +76,7 @@ include::topics/Object_Stores.adoc[]
 :leveloffset: 1
 include::topics/VDS_Switches.adoc[]
 
+
+:leveloffset: 1
+include::topics/Container_Entities.adoc[]
+
