Revert "Bz1383151 ssui updates"

--- a/doc-Introduction_to_Self_Service_Portal/topics/My_Requests_Tab.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/topics/My_Requests_Tab.adoc
@@ -2,13 +2,11 @@
 
 == The My Requests Tab
 
-The *My Requests* tab further slides out with options to view either *Requests* or *Order History*. Click *Requests* to see the list of all requests made with a summary of items associated with each request, including the request ID, requester, request date, and request status. You can filter or sort the request listings by those entities using the options at the top. 
+The *My Requests* tab lists all requests made with a summary of items associated with each request, including the Request ID, Request Date and Request Status. You can filter or sort the request listings by those values using the respective buttons at the top. 
 
-Click a particular request to view more details as shown in the following screen capture.
+image:SSUI_My_Requests.png[My Requests Tab]
 
-image:SSUI_MyRequests_Tab.png[My Requests Tab]
+Click on a particular request to view more details as shown in the following screen capture.
 
-Click *Order History* to see the list of shopping cart orders with details of each order including their ID, order date, and number of items ordered. Click an order to see further details such as the requester and order status.
-
-
+image:SSUI_Request_Details.png[My Requests Details]
 
