added new subsection on viewing container templates; fixed a bit of formatting issues where the sections beforehand were nested incorrectly.

--- a/doc-Managing_Providers/topics/Managing_Containers.adoc
+++ b/doc-Managing_Providers/topics/Managing_Containers.adoc
@@ -191,7 +191,7 @@ A *Container Services* summary page allows you to view information on different 
 
 
 [[viewing-a-volumes-summary]]
-=== Viewing a Volumes Summary
+== Viewing a Volumes Summary
 
 A *Volumes* summary page allows you to view information on the persistent volumes of a container provider, for example:
 
@@ -202,15 +202,15 @@ A *Volumes* summary page allows you to view information on the persistent volume
 
 
 .Viewing a Volumes Summary
-. Navigate to menu:Compute[Containers > Volumes].
+. Navigate to menu:Compute[Containers > Providers].
 . Click the desired containers provider for viewing the provider summary.
 . In the *Relationships* box on the right-hand side of the summary page, click *Volumes*.
-. Click the desired container for viewing.
-. Alternatively, you can access the desired volume from menu:Containers[Volumes].
+. Click the desired volume for viewing to open the volume's summary.
+. Alternatively, you can access the desired volume from menu:Compute[Containers > Volumes].
 
 
 [[viewing-a-container-builds-summary]]
-=== Viewing a Container Builds Summary
+== Viewing a Container Builds Summary
 
 A *Container Builds* summary page allows you to view different aspects of a container build, for example:
 
@@ -221,15 +221,34 @@ A *Container Builds* summary page allows you to view different aspects of a cont
 
 
 .Viewing a Container Builds Summary
-. Navigate to menu:Compute[Containers > Container Builds].
+. Navigate to menu:Compute[Containers > Providers].
 . Click the desired containers provider for viewing the provider summary.
 . In the *Relationships* box on the right-hand side of the summary page, click *Container Builds*.
-. Click the desired container for viewing.
+. Click the desired container build for viewing to open the volume's summary.
 . Alternatively, you can access the desired container build from menu:Containers[Container Builds].
 
 
+[[viewing-a-container-templates-summary]]
+== Viewing a Container Templates Summary
+
+A *Container Templates* summary page allows you to view different aspects of a container template, for example:
+
+* What project is the template associated with?
+* What objects does the template contain?
+* What parameters can be used with the template's objects?
+
+.Viewing a Container Templates Summary
+. Navigate to menu:Compute[Containers > Providers].
+. Click the desired containers provider for viewing the provider summary.
+. In the *Relationships* box on the right-hand side of the summary page, click *Container Templates*.
+. Click the desired container template to view the template's summary.
+
+Alternatively, you can access a list of container templates from menu:Containers[Container Templates]. Click on a template to view its summary.
+
+
+
 [[using-the-topology-widget]]
-=== Using the Topology Widget
+== Using the Topology Widget
 
 
 The *Topology* widget is an interactive topology graph, showing the status and relationships between the different entities of the containers providers that {product-title} has access to.
