Updated the section title and added info on centralized admin configuration

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -2780,9 +2780,11 @@ Performing this procedure destroys any existing data and cannot be undone. Back 
 . Enter `21` to quit the advanced settings menu.
 
 [[configuring_database_replication]]
-==== Configuring Database Replication
+==== Configuring Database Replication and Centralized Administration
 
-To configure database replication, you must configure one {product-title} instance to act as a global copy, and one or more other instances to act as remote copies. This database replication relationship can only be configured on {product-title} instances that are of the same version.
+To configure database replication, you must configure one {product-title} instance to act as a global copy, and one or more other instances to act as remote copies. This database replication relationship can only be configured on {product-title} instances that are of the same version. 
+
+You can also configure centralized administration via database replication settings described in this section. Once configured, {product-title} supports life cycle management operations that can be initiated from the global copy and processed and executed on the remote copy. 
 
 [NOTE]
 ======
@@ -2797,9 +2799,10 @@ The region number must be unique on each {product-title} instance where replicat
 [[configuring-a-remote-copy]]
 ===== Configuring a Remote Copy
 
-Configure a {product-title} instance to act as a remote copy where data from the global copy will be replicated. This procedure must only be performed on instances where the *Database Synchronization* role will be enabled. This procedure must be performed before enabling that role.
+Configure a {product-title} instance to act as a remote copy where data from the global copy will be replicated.
 
-. Navigate to menu:Settings[Configuration].
+. Navigate to the user settings in the top-right menu.
+. Click *Configuration*.
 . Click the *Settings* accordion. 
 . Click the region where the instance is located.
 . Click *Replication*.
@@ -2809,21 +2812,26 @@ Configure a {product-title} instance to act as a remote copy where data from the
 [[configuring-the-global-copy]]
 ===== Configuring the Global Copy
 
-Configure a {product-title} instance to act as the global copy from which data is replicated to remote copies. This procedure must only be performed on servers where the *Database Synchronization* role will be enabled. These settings must be completed before enabling that role.
+Configure a {product-title} instance to act as the global copy from which data is replicated to remote copies.
 
-. Navigate to menu:Settings[Configuration].
+image:centralized_admin_enable.png[Enable Centralized Administration]
+
+. Navigate to the user settings in the top-right menu.
+. Click *Configuration*.
 . Click the *Settings* accordion.
 . Click the region where the instance is located.
 . Click *Replication*.
 . Select *Global* from the *Type* list.
-. Add a subscription:
-.. Click *Add Subscrption*.
+. Click *Add Subscription*.
 .. Enter the name of the database on the remote copy in the *Database* field.
 .. Enter the IP address or fully qualified domain name of the remote copy in the *Host* field.
 .. Enter the name of a database user able to access the database in the *Username* field.
 .. Enter the password of the database user in the *Password* field.
 .. Enter the port by which the database is accessed in the *Port* field.
+.. In *Central Admin Enabled*, select *Yes* to enable central administration. 
 . Click *Save*.
+
+Database replication and centralized administration is now configured to support life cycle management operations that can be initiated from the global copy and processed and executed on the remote copy.
 
 [[monitoring_database_replication]]
 ===== Monitoring Database Replication
@@ -2849,14 +2857,13 @@ You can reset the replication relationship between the global copy and remote co
 .. Click *OK*.
 . Click *Save*.
 . Re-add the subscription:
-.. Click *Add Subscrption*.
+.. Click *Add Subscription*.
 .. Enter the name of the database on the remote copy in the *Database* field.
 .. Enter the IP address or fully qualified domain name of the remote copy in the *Host* field.
 .. Enter the name of a database user able to access the database in the *Username* field.
 .. Enter the password of the database user in the *Password* field.
 .. Enter the port by which the database is accessed in the *Port* field.
 . Click *Save*.
-
 
 [[running-a-single-backup]]
 ===== Running a Single Backup
