Few edits in life cycle operations

--- a/doc-Deployment_Planning_Guide/topics/planning.adoc
+++ b/doc-Deployment_Planning_Guide/topics/planning.adoc
@@ -47,14 +47,13 @@ endif::cfme[]
 [[central-administration]]
 === Centralized Administration
 
-{product-title} includes centralized administration capabilities with support for the following life cycle management operations that can be initiated from the master region and processed and executed on the remote region.
+{product-title} includes centralized administration capabilities with support for the following life cycle management operations that can be initiated from the global region and processed and executed on the remote region.
 
-* Provision virtual machine ad-hoc from master
-* Provision virtual machine from template
-* Provision service from master
-* Virtual machine power operations from master
-* Virtual machine retirement from master
-* Virtual machine reconfigure
+* Virtual machine provision from global region
+* Invoke service provision request from global region  
+* Virtual machine power operations from global region
+* Virtual machine retirement from global region
+* Virtual machine reconfigure from global region
 
 image:centralized_admin.png[Centralized Administration Diagram]
 
