--- a/doc-Deployment_Planning_Guide/topics/planning.adoc
+++ b/doc-Deployment_Planning_Guide/topics/planning.adoc
@@ -49,11 +49,11 @@ endif::cfme[]
 
 {product-title} includes centralized administration capabilities with support for the following life cycle management operations that can be initiated from the global region and processed and executed on the remote region.
 
-* Virtual machine provision from global region
-* Invoke service provision request from global region  
-* Virtual machine power operations from global region
-* Virtual machine retirement from global region
-* Virtual machine reconfigure from global region
+* Virtual machine provision from the global region
+* Invoke service provision request from the global region  
+* Virtual machine power operations from the global region
+* Virtual machine retirement from the global region
+* Virtual machine reconfigure from the global region
 
 image:centralized_admin.png[Centralized Administration Diagram]
 
