--- a/doc-Deployment_Planning_Guide/topics/planning.adoc
+++ b/doc-Deployment_Planning_Guide/topics/planning.adoc
@@ -57,12 +57,14 @@ endif::cfme[]
 
 image:centralized_admin.png[Centralized Administration Diagram]
 
-With centralized administration, the remote_queue_put leverages a new system-to-system REST API request to forward the original request to the target region. This request is put on the local queue in the target region which is then delivered by a worker in the target region as if it was queued there all along. As a result, a {product-title_short} operator in the master region can be seen as provisioning on-behalf of a remote region. 
+With centralized administration, the remote_queue_put leverages a new system-to-system REST API request to forward the original request to the remote region. This request is put on the local queue in the remote region which is then delivered by a worker in the remote region as if it was queued there all along. As a result, a {product-title_short} operator in the global region can be seen as provisioning on-behalf of a remote region. 
 
 [NOTE]
 ====
-The operations initiated from the master region are subject to the role-based access control (RBAC) rules on the master region, which also includes the role-based access control of all remote regions from replication. 
+The operations initiated from the global region are subject to the role-based access control (RBAC) rules on the global region, which also includes the role-based access control of all remote regions from replication. 
 ====
+
+For information on how to configure centralized administration via database replication, see https://access.redhat.com/documentation/en/red-hat-cloudforms/4.2-beta/single/general-configuration/#configuring_database_replication[Configuring Database Replication and Centralized Administration] in the _General Configuration_ guide.
 
 [[tenants]]
 === Tenants
