BZ#1391295: Added bones for OSP+CFME QuickStart
...also splits off many blocks from various books so they can be
single-sourced easily later, particularly for the QuickStart
we're writing now.

--- a/doc-Deployment_Planning_Guide/cfme/master.adoc
+++ b/doc-Deployment_Planning_Guide/cfme/master.adoc
@@ -13,7 +13,7 @@ include::common/attributes/cfme.adoc[]
 :cfme:
 
 :numbered:
-include::topics/introduction.adoc[]
+include::topics/common/introduction.adoc[]
 include::topics/planning.adoc[]
 include::topics/capacity.adoc[]
 
