--- a/doc-Installing_on_Google_Compute_Engine/miq/index.adoc
+++ b/doc-Installing_on_Google_Compute_Engine/miq/index.adoc
@@ -13,8 +13,6 @@ include::common/attributes/miq.adoc[]
 :miq:
 
 :numbered:
-<<<<<<< HEAD
-
 [[Installation]]
 include::topics/installation.adoc[]
 
@@ -22,11 +20,11 @@ include::topics/installation.adoc[]
 include::topics/configuration.adoc[]
 
 [[Initial_Login]]
-include::common/initial-login.adoc[]
-=======
-include::doc-Installing_on_Google_Compute_Engine/miq/topics/installation.adoc[]
-include::doc-Installing_on_Google_Compute_Engine/miq/topics/configuration.adoc[]
-include::doc-Installing_on_Google_Compute_Engine/miq/common/initial-login.adoc[]
+== Logging In After Installing {product-title}
 
->>>>>>> 43391fdb914686e2ceb0f7903c75beb4b11f7c67
+include::common/initial-login.adoc[]
+
+=== Changing the Default Login Password
+
+include::common/initial-login-changepw.adoc[]
 
