--- a/doc-Installing_on_Microsoft_Azure/cfme/master.adoc
+++ b/doc-Installing_on_Microsoft_Azure/cfme/master.adoc
@@ -19,11 +19,13 @@ include::topics/installation.adoc[]
 
 [[Configuration]]
 include::topics/configuration.adoc[]
-<<<<<<< HEAD
 
 [[Initial_Login]]
+== Logging In After Installing {product-title}
+
 include::common/initial-login.adoc[]
 
-=======
-include::common/initial-login.adoc[]
->>>>>>> 43391fdb914686e2ceb0f7903c75beb4b11f7c67
+=== Changing the Default Login Password
+
+include::common/initial-login-changepw.adoc[]
+
