--- a/doc-Installing_on_Microsoft_Azure/miq/index.adoc
+++ b/doc-Installing_on_Microsoft_Azure/miq/index.adoc
@@ -13,12 +13,6 @@ include::common/attributes/miq.adoc[]
 :miq:
 
 :numbered:
-<<<<<<< HEAD
-=======
-include::doc-Installing_on_Microsoft_Azure/miq/topics/installation.adoc[]
-include::doc-Installing_on_Microsoft_Azure/miq/topics/configuration.adoc[]
-include::doc-Installing_on_Microsoft_Azure/miq/common/initial-login.adoc[]
->>>>>>> 43391fdb914686e2ceb0f7903c75beb4b11f7c67
 
 [[Installation]]
 include::topics/installation.adoc[]
@@ -26,5 +20,12 @@ include::topics/installation.adoc[]
 [[Configuration]]
 include::topics/configuration.adoc[]
 
-[[Initial_Login]]
+[[initial-login]]
+== Logging In After Installing {product-title}
+
 include::common/initial-login.adoc[]
+
+=== Changing the Default Login Password
+
+include::common/initial-login-changepw.adoc[]
+
