--- a/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/topics/installation.adoc
+++ b/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/topics/installation.adoc
@@ -22,11 +22,8 @@ ifdef::cfme[]
 [[obtaining-the-appliance]]
 === Obtaining the Appliance
 
-. Go to link:https://access.redhat.com[access.redhat.com] and log in to the Red Hat Customer Portal using your customer account details.
-. Click *Downloads* in the menu bar.
-. Click *A-Z* to sort the product downloads alphabetically.
-. Click *Red Hat CloudForms* to access the product download page. The latest version of each download displays by default.
-. From the list of installers and images under *Product Software*, select *CFME OpenStack Virtual Appliance* and click *Download Now*.
+include::common/cfme-obtaining-the-appliance.adoc[]
+
 endif::cfme[]
 
 [[uploading-the-appliance-on-openstack]]
