--- a/doc-Managing_Infrastructure_and_Inventory/topics/Tenants.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Tenants.adoc
@@ -20,7 +20,7 @@ To see multiple tenants in {product-title}, the user authenticating to your Open
 [[tenant-mapping]]
 == Tenant Mapping
 
-include::common/tenant-mapping.adoc[]
+include::common/openstack/tenant-mapping.adoc[]
 
 :leveloffset: 2
 include::Viewing_a_Tenant.adoc[]
