--- a/doc-Installing_on_Google_Compute_Engine/cfme/master.adoc
+++ b/doc-Installing_on_Google_Compute_Engine/cfme/master.adoc
@@ -19,11 +19,12 @@ include::topics/installation.adoc[]
 
 [[Configuration]]
 include::topics/configuration.adoc[]
+
+[[initial-login]]
+== Logging In After Installing {product-title}
+
 include::common/initial-login.adoc[]
 
+=== Changing the Default Login Password
 
-
-
-[[Initial_Login]]
-include::common/initial-login.adoc[]
-
+include::common/initial-login-changepw.adoc[]
