--- a/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/miq/index.adoc
+++ b/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/miq/index.adoc
@@ -17,18 +17,19 @@ include::common/attributes/miq.adoc[]
 [[Installation]]
 include::topics/installation.adoc[]
 
-<<<<<<< HEAD
 [[Configuration]]
 include::common/configuration.adoc[]
 
 [[Additional_Configuration]]
 include::topics/additional_configuration.adoc[]
-=======
-[[Additional_Configuration]]
-include::doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/miq/topics/additional_configuration.adoc[]
-include::doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/miq/common/initial-login.adoc[]
->>>>>>> 43391fdb914686e2ceb0f7903c75beb4b11f7c67
 
 [[Initial_Login]]
+== Logging In After Installing {product-title}
+
 include::common/initial-login.adoc[]
+
+=== Changing the Default Login Password
+
+include::common/initial-login-changepw.adoc[]
+
 
