--- a/doc-Installing_on_Red_Hat_Enterprise_Virtualization/cfme/master.adoc
+++ b/doc-Installing_on_Red_Hat_Enterprise_Virtualization/cfme/master.adoc
@@ -15,16 +15,17 @@ include::common/attributes/cfme.adoc[]
 :numbered:
 
 [[Installation]]
-<<<<<<< HEAD
 include::topics/installation.adoc[]
 
 [[Configuration]]
 include::common/configuration.adoc[]
 
 [[Initial_Login]]
+== Logging In After Installing {product-title}
+
 include::common/initial-login.adoc[]
 
-=======
-include::/common/configuration.adoc[]
-include::/common/initial-login.adoc[]
->>>>>>> 43391fdb914686e2ceb0f7903c75beb4b11f7c67
+=== Changing the Default Login Password
+
+include::common/initial-login-changepw.adoc[]
+
