--- a/doc-Installing_on_Red_Hat_Enterprise_Virtualization/miq/index.adoc
+++ b/doc-Installing_on_Red_Hat_Enterprise_Virtualization/miq/index.adoc
@@ -15,16 +15,18 @@ include::common/attributes/miq.adoc[]
 :numbered:
 
 [[Installation]]
-<<<<<<< HEAD
 include::topics/installation.adoc[]
 
 [[Configuration]]
 include::common/configuration.adoc[]
-=======
-include::doc-Installing_on_Red_Hat_Enterprise_Virtualization/miq/common/configuration.adoc[]
-include::doc-Installing_on_Red_Hat_Enterprise_Virtualization/miq/common/initial-login.adoc[]
->>>>>>> 43391fdb914686e2ceb0f7903c75beb4b11f7c67
 
 [[Initial_Login]]
+== Logging In After Installing {product-title}
+
 include::common/initial-login.adoc[]
+
+=== Changing the Default Login Password
+
+include::common/initial-login-changepw.adoc[]
+
 
