--- a/doc-Installing_on_VMware_vSphere/cfme/master.adoc
+++ b/doc-Installing_on_VMware_vSphere/cfme/master.adoc
@@ -22,11 +22,13 @@ include::common/configuration.adoc[]
 
 [[Additional_Configuration]]
 include::topics/additional_configuration.adoc[]
-<<<<<<< HEAD
 
 [[Initial_Login]]
+== Logging In After Installing {product-title}
+
 include::common/initial-login.adoc[]
 
-=======
-include::common/initial-login.adoc[]
->>>>>>> 43391fdb914686e2ceb0f7903c75beb4b11f7c67
+=== Changing the Default Login Password
+
+include::common/initial-login-changepw.adoc[]
+
