--- a/doc-Installing_on_VMware_vSphere/miq/index.adoc
+++ b/doc-Installing_on_VMware_vSphere/miq/index.adoc
@@ -15,16 +15,7 @@ include::common/attributes/miq.adoc[]
 :numbered:
 
 [[Installation]]
-<<<<<<< HEAD
 include::topics/installation.adoc[]
-=======
-include::doc-Installing_on_VMware_vSphere/miq/common/configuration.adoc[]
-
-[[Additional_Configuration]]
-include::doc-Installing_on_VMware_vSphere/miq/topics/additional_configuration.adoc[]
-include::doc-Installing_on_VMware_vSphere/miq/common/initial-login.adoc[]
-
->>>>>>> 43391fdb914686e2ceb0f7903c75beb4b11f7c67
 
 [[Configuration]]
 include::common/configuration.adoc[]
@@ -32,6 +23,12 @@ include::common/configuration.adoc[]
 [[Additional_Configuration]]
 include::topics/additional_configuration.adoc[]
 
-[[Initial_Login]]
+[[initial-login]]
+== Logging In After Installing {product-title}
+
 include::common/initial-login.adoc[]
+
+=== Changing the Default Login Password
+
+include::common/initial-login-changepw.adoc[]
 
