removed note to self in doc

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Container_Entities.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Container_Entities.adoc
@@ -20,7 +20,7 @@ Labels from OpenShift can be mapped to {product-title} tags for the following co
 Note that tags created by this method are completely managed by the system and cannot be manually assigned or unassigned.
 Deleting a mapping rule immediately deletes the resulting tags.
 
-View a container entity's OpenShift labels on container entities on the entity's details page. OpenShift labels are listed under the *Labels* heading. (on its summary page? On nodes and what else?)
+View a container entity's OpenShift labels on container entities on the entity's details page. OpenShift labels are listed under the *Labels* heading.
 
 To configure automatic tagging on container entities using OpenShift labels:
 
