--- a/auth/ipa_ad_trust.adoc
+++ b/auth/ipa_ad_trust.adoc
@@ -33,7 +33,7 @@ The following is needed in order to enable AD Trust Authentication to the Applia
 Instructions for setting up and configuring cross-realm trust between an IPA domain and an AD (Active Directory) domain
 can be found at http://www.freeipa.org/page/Active_Directory_trust_setup[freeipa.org Active Directory Trust Setup]
 
-* Add necessary user attributes to the SSSD Configuration on the IPA Server
+* Add necessary user attributes to the SSSD configuration on the IPA server
 
 The SSSD configuration file on the IPA Server must be updated to list needed user attributes.
 
