Edited as per peer review.
Edited as per peer review.

--- a/common/cfme-install-appliance-as-vm.adoc
+++ b/common/cfme-install-appliance-as-vm.adoc
@@ -3,7 +3,7 @@
 . Log in as `root` to the virtual machine host.
 . Copy the appliance to `/var/lib/libvirt/images/`.
 . Run `virt-manager`. Doing so will launch the Virtual Machine Manager.
-. Enter a name for the VM in the *Name* field; for example, use `my-cfme`. Select *Import existing disk image* and click *Forward*.
+. Enter a name for the virtual machine in the *Name* field; for example, use `my-cfme`. Select *Import existing disk image* and click *Forward*.
 +
 image:virt-manager-install-step1.png[]
 . Click *Browse* to select the copy of the appliance stored in `/var/lib/libvirt/images/`.
@@ -14,10 +14,10 @@ Select *Linux* from the *OS type* drop-down. For *Version*, select *Red Hat Ente
 . Configure the appliance with 4 CPUs and 8192MiB or memory. Select *Customize configuration before install* then click *Finish*.
 +
 image:virt-manager-install-step3.png[]
-. Add a second network interface for the VM. Select *virtio* as its *Device Model*.
+. Add a second network interface for the virtual machine. Select *virtio* as its *Device Model*.
 +
 image:virt-manager-install-step4.png[]
-. Configure the VM with two additional virtual disks. One will be used for the internal database (xref:configuring_a_database[]), while the other will be used for mounting images and SmartState analysis.
+. Configure the virtual machine with two additional virtual disks. One will be used for the internal database (xref:configuring_a_database[]), while the other will be used for mounting images and SmartState analysis.
 +
 image:virt-manager-install-step5.png[]
-. Click *Finish* to launch the VM. 
+. Click *Finish* to launch the virtual machine. 
