Editing per peer review
3 of the menu items here had the same description. This commit fixes that.

--- a/common/configuration-gui.adoc
+++ b/common/configuration-gui.adoc
@@ -4,11 +4,11 @@ There are four main areas:
 
 * *Settings*
 +
-This menu enables you to modify the configuration of your {product-title} infrastructure. You can also create analysis profiles and schedules for these profiles.
+This menu allows you to configure global settings for your {product-title} infrastructure. You can also create analysis profiles and schedules for these profiles.
 +
 * *Access Control*
 +
-This menu enables you to modify the configuration of your {product-title} infrastructure. You can also create analysis profiles and schedules for these profiles.
+This menu contains options for configuring users, groups, roles, and tenants. 
 +
 * *Diagnostics*
 +
@@ -16,4 +16,4 @@ This menu displays the status of your servers and their roles and provides acces
 +
 * *Database*
 +
-This menu enables you to modify the configuration of your {product-title} infrastructure. You can also create analysis profiles and schedules for these profiles.
+specify the location of your Virtual Machine Database (VMDB) and its login credentials.
